# Copyright 2022-2023 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR GPL-3.0-or-later

option('alsa', type: 'feature', yield: true,
       description: 'Build ALSA sequencer support')

option('checks', type: 'feature', value: 'enabled', yield: true,
       description: 'Check for platform-specific features')

option('jack', type: 'feature', yield: true,
       description: 'Build JACK audio and MIDI support')

option('jack_dbus', type: 'feature', yield: true,
       description: 'Use JACK via D-Bus')

option('lint', type: 'boolean', value: false, yield: true,
       description: 'Run code quality checks')

option('strict', type: 'boolean', value: false, yield: true,
       description: 'Enable ultra-strict warnings')

option('tests', type: 'feature', yield: true,
       description: 'Build tests')

option('title', type: 'string', value: 'Patchage',
       description: 'Project title')
